Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-11 02:18+0000\n"
+"POT-Creation-Date: 2021-09-14 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3091,7 +3091,6 @@ msgstr "boolean"
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:28896
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:28928
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:28978
-#: upstream/_generated-config/main/config/quarkus-all-config.adoc:29050
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:29068
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:29077
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:29086
@@ -44477,7 +44476,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Print the data fetcher exception to the log file.\n"
+"Print the data fetcher exception to the log file. Default `true` in dev and test mode, default `false` in prod.\n"
 "--"
 msgstr ""
 
