--- a/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-26 02:16+0000\n"
+"POT-Creation-Date: 2021-09-14 02:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4075,7 +4075,7 @@ msgid ""
 "    return Multi.createBy().merging()\n"
 "            .streams(\n"
 "                    fruits.map(this::toJson),\n"
-"                    getPingStream()\n"
+"                    emitAPeriodicPing()\n"
 "            );\n"
 "}\n"
 msgstr ""
