Update translation stats

--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-09-14-quarkus-newsletter-12.adoc.po, 0, 6, 0, 155 ,100%
 l10n/po/ja_JP/_posts/2021-09-07-quarkus-2-2-2-final-released.adoc.po, 0, 14, 0, 153 ,100%
 l10n/po/ja_JP/_posts/2021-08-31-quarkus-2-2-1-final-released.adoc.po, 0, 44, 0, 642 ,100%
 l10n/po/ja_JP/_posts/2021-08-26-quarkus-2-1-4-final-released.adoc.po, 0, 14, 0, 151 ,100%
