Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/amazon-lambda-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amazon-lambda-http.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-13 02:14+0000\n"
+"POT-Creation-Date: 2021-09-15 02:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,12 +22,14 @@ msgstr ""
 #. type: Title =
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:6
 #, no-wrap
-msgid "Amazon Lambda with RESTEasy, Undertow, or Vert.x Web"
+msgid "Amazon Lambda with RESTEasy, Undertow, or Reactive Routes"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:14
-msgid "With Quarkus you can deploy your favorite Java HTTP frameworks as Amazon Lambda's using either the https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api.html[AWS Gateway HTTP API] or https://docs.aws.amazon.com/apigateway/latest/developerguide/apigateway-rest-api.html[AWS Gateway REST API].  This means that you can deploy your microservices written with RESTEasy (JAX-RS), Undertow (servlet), Vert.x Web, link:funqy-http[Funqy HTTP] or any other Quarkus HTTP framework as an AWS Lambda."
+#, fuzzy
+#| msgid "With Quarkus you can deploy your favorite Java HTTP frameworks as Amazon Lambda's using either the https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api.html[AWS Gateway HTTP API] or https://docs.aws.amazon.com/apigateway/latest/developerguide/apigateway-rest-api.html[AWS Gateway REST API].  This means that you can deploy your microservices written with RESTEasy (JAX-RS), Undertow (servlet), Vert.x Web, link:funqy-http[Funqy HTTP] or any other Quarkus HTTP framework as an AWS Lambda."
+msgid "With Quarkus you can deploy your favorite Java HTTP frameworks as Amazon Lambda's using either the https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api.html[AWS Gateway HTTP API] or https://docs.aws.amazon.com/apigateway/latest/developerguide/apigateway-rest-api.html[AWS Gateway REST API].  This means that you can deploy your microservices written with RESTEasy (JAX-RS), Undertow (servlet), Reactive Routes, link:funqy-http[Funqy HTTP] or any other Quarkus HTTP framework as an AWS Lambda."
 msgstr "Quarkusでは、 link:https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api.html[AWS Gateway HTTP API]または link:https://docs.aws.amazon.com/apigateway/latest/developerguide/apigateway-rest-api.html[AWS Gateway REST] APIのいずれかを使用して、お気に入りのJava HTTPフレームワークをAmazon Lambdaとしてデプロイできます。つまり、RESTEasy（JAX-RS）、Undertow（サーブレット）、Vert.x Web、 link:funqy-http[Funqy HTTP]、その他のQuarkusのHTTPフレームワークで書かれたマイクロサービスを、AWS Lambdaとしてデプロイすることができます。"
 
 #. type: Plain text
@@ -463,7 +465,7 @@ msgstr "POM には `quarkus-amazon-lambda-http` エクステンション(AWS Gat
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:258
 #, fuzzy
 #| msgid "Also, at least in the generated maven archetype `pom.xml`, the `quarkus-resteasy`, `quarkus-vertx-web`, and `quarkus-undertow` dependencies are all optional.  Pick which http framework(s) you want to use (JAX-RS, Vertx Web, and/or Servlet) and remove the other dependencies to shrink your deployment."
-msgid "Also, at least in the generated Maven archetype `pom.xml`, the `quarkus-resteasy`, `quarkus-reactive-routes`, and `quarkus-undertow` dependencies are all optional.  Pick which HTTP framework(s) you want to use (JAX-RS, Vertx Web, and/or Servlet) and remove the other dependencies to shrink your deployment."
+msgid "Also, at least in the generated Maven archetype `pom.xml`, the `quarkus-resteasy`, `quarkus-reactive-routes`, and `quarkus-undertow` dependencies are all optional.  Pick which HTTP framework(s) you want to use (JAX-RS, Reactive Routes, and/or Servlet) and remove the other dependencies to shrink your deployment."
 msgstr "また、少なくとも生成された maven のアーキタイプ `pom.xml` , `quarkus-resteasy` , `quarkus-vertx-web` , `quarkus-undertow` の依存関係はすべてオプションです。使用したい http フレームワーク (JAX-RS、Vertx Web、および/または Servlet) を選択し、他の依存関係を削除してデプロイを縮小します。"
 
 #. type: Title ===
@@ -640,12 +642,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:366
-msgid "When you invoke an HTTP request on the API Gateway, the Gateway turns that HTTP request into a JSON event document that is forwarded to a Quarkus Lambda.  The Quarkus Lambda parses this json and converts in into an internal representation of an HTTP request that can be consumed by any HTTP framework Quarkus supports (JAX-RS, servlet, Vert.x Web)."
+msgid "When you invoke an HTTP request on the API Gateway, the Gateway turns that HTTP request into a JSON event document that is forwarded to a Quarkus Lambda.  The Quarkus Lambda parses this json and converts in into an internal representation of an HTTP request that can be consumed by any HTTP framework Quarkus supports (JAX-RS, servlet, Reactive Routes)."
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:373
-msgid "API Gateway supports many different ways to securely invoke on your HTTP endpoints that are backed by Lambda and Quarkus.  If you enable it, Quarkus will automatically parse relevant parts of the https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-develop-integrations-lambda.html[event json document] and look for security based metadata and register a `java.security.Principal` internally that can be looked up in JAX-RS by injecting a `javax.ws.rs.core.SecurityContext`, via `HttpServletRequest.getUserPrincipal()` in servlet, and `RouteContext.user()` in Vert.x Web.  If you want more security information, the `Principal` object can be typecast to a class that will give you more information."
+msgid "API Gateway supports many different ways to securely invoke on your HTTP endpoints that are backed by Lambda and Quarkus.  If you enable it, Quarkus will automatically parse relevant parts of the https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-develop-integrations-lambda.html[event json document] and look for security based metadata and register a `java.security.Principal` internally that can be looked up in JAX-RS by injecting a `javax.ws.rs.core.SecurityContext`, via `HttpServletRequest.getUserPrincipal()` in servlet, and `RouteContext.user()` in Reactive Routes.  If you want more security information, the `Principal` object can be typecast to a class that will give you more information."
 msgstr ""
 
 #. type: Plain text
