--- a/l10n/po/ja_JP/_versions/main/guides/gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/gcp-functions-http.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-26 02:16+0000\n"
+"POT-Creation-Date: 2021-09-15 02:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,17 +22,17 @@ msgstr ""
 #. type: Title =
 #: upstream/_versions/main/guides/gcp-functions-http.adoc:6
 #, no-wrap
-msgid "Google Cloud Functions (Serverless) with RESTEasy, Undertow, or Vert.x Web"
+msgid "Google Cloud Functions (Serverless) with RESTEasy, Undertow, or Reactive Routes"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/gcp-functions-http.adoc:13
-msgid "The `quarkus-google-cloud-functions-http` extension allows you to write microservices with RESTEasy (JAX-RS), Undertow (Servlet), Vert.x Web, or link:funqy-http[Funqy HTTP], and make these microservices deployable to the Google Cloud Functions runtime."
+msgid "The `quarkus-google-cloud-functions-http` extension allows you to write microservices with RESTEasy (JAX-RS), Undertow (Servlet), Reactive Routes, or link:funqy-http[Funqy HTTP], and make these microservices deployable to the Google Cloud Functions runtime."
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/gcp-functions-http.adoc:15
-msgid "One Google Cloud Functions deployment can represent any number of JAX-RS, Servlet, Vert.x Web, or link:funqy-http[Funqy HTTP] endpoints."
+msgid "One Google Cloud Functions deployment can represent any number of JAX-RS, Servlet, Reactive Routes, or link:funqy-http[Funqy HTTP] endpoints."
 msgstr ""
 
 #. type: Title ==
@@ -79,7 +79,7 @@ msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/gcp-functions-http.adoc:33
-msgid "This guide walks you through generating a sample project followed by creating three HTTP endpoints written with JAX-RS APIs, Servlet APIs, Vert.x Web, or link:funqy-http[Funqy HTTP] APIs. Once built, you will be able to deploy the project to Google Cloud."
+msgid "This guide walks you through generating a sample project followed by creating three HTTP endpoints written with JAX-RS APIs, Servlet APIs, Reactive Routes, or link:funqy-http[Funqy HTTP] APIs. Once built, you will be able to deploy the project to Google Cloud."
 msgstr ""
 
 #. type: Plain text
@@ -117,7 +117,7 @@ msgid ""
 "    -DprojectArtifactId=google-cloud-functions-http \\\n"
 "    -DclassName=\"org.acme.quickstart.GreetingResource\" \\\n"
 "    -Dpath=\"/hello\" \\\n"
-"    -Dextensions=\"resteasy,google-cloud-functions-http,resteasy-json,undertow,vertx-web,funqy-http\"\n"
+"    -Dextensions=\"resteasy,google-cloud-functions-http,resteasy-jackson,undertow,reactive-routes,funqy-http\"\n"
 msgstr ""
 
 #. type: Title ==
@@ -145,7 +145,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/gcp-functions-http.adoc:68
-msgid "For this example project, we will create four endpoints, one for RESTEasy (JAX-RS), one for Undertow (Servlet), one for Vert.x Web (reactive routes) and one for link:funqy-http[Funqy HTTP]."
+msgid "For this example project, we will create four endpoints, one for RESTEasy (JAX-RS), one for Undertow (Servlet), one for Reactive routes and one for link:funqy-http[Funqy HTTP]."
 msgstr ""
 
 #. type: Plain text
@@ -253,7 +253,7 @@ msgstr ""
 #. type: Title ===
 #: upstream/_versions/main/guides/gcp-functions-http.adoc:122
 #, no-wrap
-msgid "The Vert.x Web endpoint"
+msgid "The Reactive Routes endpoint"
 msgstr ""
 
 #. type: delimited block -
@@ -380,7 +380,7 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/gcp-functions-http.adoc:193
-msgid "For Vert.x Web: {httpsTrigger.url}/vertx/hello"
+msgid "For Reactive Routes: {httpsTrigger.url}/vertx/hello"
 msgstr ""
 
 #. type: delimited block =
