Add machine translation

--- a/l10n/po/ja_JP/_posts/2021-09-15-adoptium-customer-story.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-09-15-adoptium-customer-story.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Eclipse Adoptium Uses Quarkus for high volume Java SE distribution API'\n"
@@ -34,18 +34,25 @@ msgid ""
 "author: jfalkner\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Eclipse Adoptium、大量のJava SE配布APIにQuarkusを採用'\n"
+"date: 2021-09-15\n"
+"tags: user-story\n"
+"synopsis: Javaは世界中で何百万人もの開発者によって使用され、2番目に人気のある言語であり、それらはすべてJavaランタイムを必要とします。最も人気のあるJavaディストリビューションであるAdoptiumは、開発者がプログラムで発見し、多くの異なるバリアントにある構築済みのJavaバイナリにアクセスする方法を提供する必要があり、パフォーマンスと開発者の生産性を向上させるためにQuarkusでエンドユーザーAPIを制作しました。\n"
+"author: jfalkner\n"
+"---\n"
 
 #. type: Title =
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:12
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Eclipse Adoptium Uses Quarkus for high volume Java SE distribution API"
-msgstr ""
+msgstr "Eclipse Adoptium、大量のJava SE配布APIにQuarkusを採用"
 
 #. type: Positional ($1) AttributeList argument for macro 'image'
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:14
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Adoptium logo"
-msgstr ""
+msgstr "Adoptiumのロゴ"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:14
@@ -55,36 +62,39 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:17
+#, fuzzy
 msgid "Java is used by https://www.daxx.com/blog/development-trends/number-software-developers-world[millions^] of developers worldwide and according to Redmonk, https://redmonk.com/sogrady/2021/08/05/language-rankings-6-21/[recently moved^] back to the #2 most used programming language. There are many distributions of the Java runtime and development kit, but the Eclipse Temurin (formerly known as AdoptOpenJDK) distribution has proven to be the https://snyk.io/jvm-ecosystem-report-2021/[most popular^]. Recently, the AdoptOpenJDK project was moved into the Eclipse Foundation as https://adoptium.net/[Eclipse Adoptium^]. The goal of Adoptium is to promote and support high-quality, TCK certified runtimes and associated technology for use across the Java ecosystem. It does this by performing regular builds, tests, certifications, and of course serving binaries to those millions of developers that need to evaluate, prototype, and run production workloads with Java. Like other open source Eclipse projects, the team behind the distribution API are mostly volunteers, so they are constantly looking for optimizations of their time and resources and technology used to deliver on their mission."
-msgstr ""
+msgstr "Javaは世界中で link:https://www.daxx.com/blog/development-trends/number-software-developers-world[何百万人もの, window=_blank]開発者に使用されており、Redmonkによると、 link:https://redmonk.com/sogrady/2021/08/05/language-rankings-6-21/[最近, window=_blank]最も使用されているプログラミング言語の第2位に link:https://redmonk.com/sogrady/2021/08/05/language-rankings-6-21/[返り咲い, window=_blank]たとのことです。Javaのランタイムおよび開発キットには多くのディストリビューションがありますが、Eclipse Temurin（旧称AdoptOpenJDK）ディストリビューションが最も link:https://snyk.io/jvm-ecosystem-report-2021/[人気が, window=_blank]あることがわかっています。最近、AdoptOpenJDKプロジェクトは、 link:https://adoptium.net/[Eclipse Adoptium, window=_blank]としてEclipse Foundationに移されました。Adoptiumの目的は、Javaエコシステム全体で使用される高品質なTCK認証ランタイムと関連技術を促進しサポートすることです。Adoptiumは、定期的なビルド、テスト、認証、そしてもちろん、Javaを使った評価、プロトタイプ、本番ワークロードの実行を必要とする何百万人もの開発者にバイナリを提供することによってこれを行います。他のオープンソースのEclipseプロジェクトと同様に、配布APIを支えるチームはほとんどがボランティアであるため、彼らは自分たちの使命を果たすために使用する時間やリソース、技術の最適化を常に模索している。"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:18
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The Challenge"
-msgstr ""
+msgstr "挑戦"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:21
+#, fuzzy
 msgid "While developers can download distributions directly from the https://adoptium.net/[Adoptium website^] with a single click, it becomes more of a challenge to automate this process, for example in a CI/CD pipeline. This is especially true due to the number of variants of Java versions, release types, operating systems, architectures, JVM implementations, etc. To that end, Adoptium needed to offer a way to programmatically discover and access pre-built binaries based on these variables, and produced https://api.adoptium.net/q/swagger-ui/[an end-user API^]."
-msgstr ""
+msgstr "開発者は link:https://adoptium.net/[Adoptium のウェブサイト, window=_blank]からワンクリックで直接ディストリビューションをダウンロードできますが、例えば CI/CD パイプラインでこのプロセスを自動化することはより困難になります。これは、Javaのバージョン、リリースタイプ、オペレーティングシステム、アーキテクチャ、JVMの実装などのバリエーションが多いために特に顕著です。そのため、Adoptiumは、これらの変数に基づいてプログラムで事前に構築されたバイナリを発見してアクセスする方法を提供する必要があり、 link:https://api.adoptium.net/q/swagger-ui/[エンドユーザAPI, window=_blank]を作成しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:23
+#, fuzzy
 msgid "The sheer volume of AdoptOpenJDK downloads, https://dash.adoptopenjdk.net/trends[about 500,000 per day^], meant that performance would become a key consideration for the API. In addition, Adoptium does not have a traditional datacenter, so all of this runs in the cloud on Microsoft Azure, where costs can increase when you have continuously running workloads that take up unnecessary space."
-msgstr ""
+msgstr "AdoptOpenJDKのダウンロード数が link:https://dash.adoptopenjdk.net/trends[1日あたり約50万, window=_blank]件と非常に多いため、APIのパフォーマンスが重要な検討事項となりました。さらに、アドプトは従来のデータセンターを持たないため、これらはすべてMicrosoft Azure上のクラウドで実行されます。不必要なスペースを占有するワークロードを継続的に実行すると、コストが増大する可能性があります。"
 
 #. type: Positional ($1) AttributeList argument for macro 'image'
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:24
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Download trends"
-msgstr ""
+msgstr "ダウンロードトレンド"
 
 #. type: Named 'title' AttributeList argument for macro 'image'
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:24
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Recent download statistics for Adoptium distributions, from https://dash.adoptopenjdk.net/trends[dash.adoptopenjdk.net]"
-msgstr ""
+msgstr "link:https://dash.adoptopenjdk.net/trends[dash.adapttopenjdk.net]からの Adoptium ディストリビューションの最近のダウンロード統計です。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:24
@@ -94,18 +104,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:27
+#, fuzzy
 msgid "In 2017, the technical team’s first attempt at exposing an API was using Node.js + Express. As the request volume and number of distribution variants rose, the team found that the response times were getting slower, not only due to the volume, but also due to architectural choices made early on. In particular, the application’s monolithic architecture, where the frontend and backend were in the same app, would cause apparent slowness in the frontend, while the backend processed concurrent requests. In addition, lack of pagination in the API meant that requests could return huge results, even when only the first few elements of the result were needed."
-msgstr ""
+msgstr "2017年、技術チームがAPIを公開する最初の試みは、Node.js + Expressを使ったものでした。リクエスト量や配信バリエーションの数が増えるにつれ、チームはレスポンスタイムが遅くなっていることに気づきましたが、これは量の問題だけではなく、初期に行ったアーキテクチャの選択が原因でした。特に、フロントエンドとバックエンドが同じアプリ内にあるモノリシックアーキテクチャでは、バックエンドが同時リクエストを処理している間、フロントエンドが明らかに遅くなっていました。また、APIにページネーションがないため、結果の最初の数要素だけが必要な場合でも、リクエストが巨大な結果を返すことがありました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:29
+#, fuzzy
 msgid "The lead developer on the Technical Steering Committee responsible for the upkeep of the API explains:"
-msgstr ""
+msgstr "APIの説明を維持するための技術運営委員会の主任開発者。"
 
 #. type: delimited block _
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:33
+#, fuzzy
 msgid "The existing API had design flaws that wouldn’t have been easy to fix, so we were considering replacing it with a new implementation. Our small team had more experience in JVM languages than JavaScript, and since this was an API serving Java data, we thought eating our own dogfood would be a good thing!"
-msgstr ""
+msgstr "既存のAPIには設計上の欠陥があり、修正するのは容易ではありませんでしたので、新たな実装に置き換えることを検討していました。私たちの小さなチームは、JavaScriptよりもJVM言語の経験が豊富で、これはJavaデータを提供するAPIだったので、自分たちのドッグフードを食べるのは良いことだと考えました。"
 
 #. type: delimited block _
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:35
@@ -114,116 +127,132 @@ msgstr ""
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:66
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:79
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:90
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "*-Lead Developer on the Adoptium Technical Steering Committee*\n"
-msgstr ""
+msgstr "*-Adoptium Technical Steering Committeeのリードデベロッパー*"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:37
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Enter Quarkus"
-msgstr ""
+msgstr "Quarkusの登場"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:40
+#, fuzzy
 msgid "In July 2019 the team discovered Quarkus through its related work with other frameworks in the Java ecosystem. They were especially interested in Quarkus’ promise of stellar performance and smaller footprint, which is comparable to Node.js and even Golang. Even better, Quarkus’ https://quarkus.io/guides/kotlin[first class support for Kotlin^] meant the team could re-use both their Java and Kotlin experience with Quarkus."
-msgstr ""
+msgstr "2019年7月、チームは、Javaエコシステムの他のフレームワークとの関連作業を通じてQuarkusを発見しました。彼らは特に、Quarkusが約束する、Node.jsやGolangに匹敵する優れたパフォーマンスと小さなフットプリントに興味を持ちました。さらに、Quarkusは link:https://quarkus.io/guides/kotlin[Kotlinをファーストクラスでサポートしている, window=_blank]ため、チームはJavaとKotlinの両方の経験をQuarkusで再利用することができました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:42
+#, fuzzy
 msgid "The team found Quarkus extremely easy to develop, especially the https://quarkus.io/vision/developer-joy#live-coding[Live Coding capability^]. The familiar JAX-RS APIs in Quarkus made it easy to create the necessary endpoints. The lead engineer explains further:"
-msgstr ""
+msgstr "チームは、Quarkusが非常に開発しやすく、特に link:https://quarkus.io/vision/developer-joy#live-coding[ライブコーディングの機能, window=_blank]が優れていると感じました。Quarkusの使い慣れたJAX-RS APIにより、必要なエンドポイントを簡単に作成することができました。リードエンジニアがさらに説明しています。"
 
 #. type: delimited block _
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:46
+#, fuzzy
 msgid "We really liked the fact that Quarkus uses JAX-RS, which we were already familiar with. Having out-of-the-box integration with https://quarkus.io/guides/resteasy-reactive[RESTEasy reactive^] was a nice performance bonus, and the https://quarkus.io/guides/openapi-swaggerui[OpenAPI extension^] available in Quarkus made it pretty simple to expose the API as a Swagger API browser with no additional work needed."
-msgstr ""
+msgstr "QuarkusがJAX-RSを使用していることは、私たちがすでに慣れ親しんでいることであり、非常に気に入っています。また、Quarkusで利用できる link:https://quarkus.io/guides/openapi-swaggerui[OpenAPI拡張機能, window=_blank]により、追加作業なしでAPIをSwagger APIブラウザとして公開することが非常に簡単になりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:51
+#, fuzzy
 msgid "Live Coding with Quarkus also proved extremely useful when developing the application:"
-msgstr ""
+msgstr "また、Quarkusを使ったライブコーディングは、アプリケーションの開発に非常に役立ちました。"
 
 #. type: delimited block _
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:55
+#, fuzzy
 msgid "The live coding fast feedback loop was very useful when developing with Quarkus. Although fast startup was nice, it wasn’t critical since our apps are long-running, but during development, as we tweaked our APIs, being able to immediately re-test saved us a ton of development time."
-msgstr ""
+msgstr "Quarkusでの開発では、ライブコーディングによる高速なフィードバックループが非常に役立ちました。起動が速いのはいいことですが、私たちのアプリは長時間稼働しているので、それほど重要ではありませんでした。しかし、開発中にAPIを微調整する際に、すぐに再テストができることで、開発時間を大幅に短縮することができました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:60
+#, fuzzy
 msgid "The out-of-the-box performance of Quarkus on JVM exceeded their expectations quite easily:"
-msgstr ""
+msgstr "JVM上のQuarkusのすぐに使えるパフォーマンスは、彼らの期待をいとも簡単に超えました。"
 
 #. type: delimited block _
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:64
+#, fuzzy
 msgid "We initially wanted sub-second response times for most of the API, and be able to handle around 10 thousand requests per second. With zero optimizations, our app was responding within 1ms for most APIs, and easily surpassed our throughput requirements. This is way more than we will need for the foreseeable future. The Quarkus app also uses less than half the CPU time [compared to Node.js], despite handling more traffic and providing more functionality."
-msgstr ""
+msgstr "当初は、ほとんどのAPIで1秒以下のレスポンスタイムを実現し、1秒間に約1万件のリクエストを処理できるようにしたいと考えていました。最適化を一切行わなかったにもかかわらず、ほとんどのAPIで1ms以内に応答するようになり、要求していたスループットを簡単に上回ることができました。これは、予測可能な将来に必要とされる数をはるかに上回るものです。また、Quarkusのアプリは、より多くのトラフィックを処理し、より多くの機能を提供しているにもかかわらず、（Node.jsと比較して）半分以下のCPU時間しか使用していません。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:69
+#, fuzzy
 msgid "Overall, the move to Quarkus has been a very positive experience, with real benefits in terms of developer productivity and operational efficiency. The team has been using Quarkus in production for the Adoptium API since November 2019 and has proved to be extremely stable."
-msgstr ""
+msgstr "全体的に見て、Quarkusへの移行は、開発者の生産性や運用効率の面で実際にメリットがあり、非常にポジティブな経験となりました。チームは2019年11月からAdoptium APIの本番でQuarkusを使用しており、非常に安定していることがわかりました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:70
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "An Active Community"
-msgstr ""
+msgstr "活発なコミュニティ"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:73
+#, fuzzy
 msgid "Communities are a critical aspect to any open source project’s success, including Quarkus. It is no surprise that the health of a community is a major consideration when an adoption decision must be made. For Adoptium, this is made clear by example:"
-msgstr ""
+msgstr "コミュニティは、Quarkusを含め、あらゆるオープンソースプロジェクトの成功に欠かせない要素です。Quarkusを含め、オープンソースプロジェクトの成功にはコミュニティが欠かせません。採用を決定する際にコミュニティの健全性が重要視されるのは当然のことです。Adoptiumでは、これは例を見れば明らかです。"
 
 #. type: delimited block _
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:77
+#, fuzzy
 msgid "Earlier this year we discovered a memory leak in the RESTEasy Reactive component in Quarkus. Within a few days, working with the Quarkus community, we were able to identify and fix the issue. This gave us the confidence that longer term, we’ll be able to resolve issues quickly."
-msgstr ""
+msgstr "今年の初めに、QuarkusのRESTEasy Reactiveコンポーネントにメモリリークがあることがわかりました。数日のうちに、Quarkusのコミュニティと協力して、問題を特定して修正することができました。これにより、長期的には問題を迅速に解決することができるという確信を得ることができました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:81
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "What’s Next for Adoptium"
-msgstr ""
+msgstr "アドプトゥムの次なる展開"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:84
+#, fuzzy
 msgid "Adoptium has been very happy with their decision to adopt Quarkus, and are looking forward to trying out new capabilities in Quarkus like continuous testing and dev services support for MongoDB (their database of choice)."
-msgstr ""
+msgstr "AdoptiumはQuarkusを採用したことに非常に満足しており、継続的なテストやMongoDB（同社が選択したデータベース）の開発サービスサポートなど、Quarkusの新しい機能を試すことを楽しみにしています。"
 
 #. type: delimited block _
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:88
+#, fuzzy
 msgid "Overall, we have been very impressed with the capabilities of Quarkus, and our experience with the Quarkus community has been fantastic. We look forward to seeing how it evolves, and improving how we serve the Java community’s Java distribution needs for years to come!"
-msgstr ""
+msgstr "全体的に見て、Quarkusの機能には非常に感銘を受けましたし、Quarkusコミュニティでの経験も素晴らしいものでした。今後もQuarkusがどのように進化していくのか、また、JavaコミュニティのJavaディストリビューションのニーズに応える方法を改善していくことを楽しみにしています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:92
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "More Information"
-msgstr ""
+msgstr "詳細情報"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:95
+#, fuzzy
 msgid "https://api.adoptium.net/q/swagger-ui/[Adoptium API]"
-msgstr ""
+msgstr "link:https://api.adoptium.net/q/swagger-ui/[Adoptium API]"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:96
+#, fuzzy
 msgid "https://github.com/AdoptOpenJDK/openjdk-api-v3[Adoptium API Source code]"
-msgstr ""
+msgstr "link:https://github.com/AdoptOpenJDK/openjdk-api-v3[Adoptium API ソースコード]"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:97
+#, fuzzy
 msgid "https://adoptium.net/faq.html[Adoptium FAQ]"
-msgstr ""
+msgstr "link:https://adoptium.net/faq.html[Adoptium FAQ]"
 
 #. type: Title ===
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:98
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "About Eclipse Adoptium"
-msgstr ""
+msgstr "Eclipse Adoptiumについて"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-15-adoptium-customer-story.adoc:99
+#, fuzzy
 msgid "The mission of the Eclipse Adoptium Top-Level Project is to produce high-quality runtimes and associated technology for use within the Java ecosystem. Eclipse Adoptium also provides artifacts including open-source infrastructure as code, a comprehensive continuous integration build and test farm, and extensive quality assurance tests. These artifacts may be used by Eclipse Adoptium projects and other runtime technology builders to ensure the provision of secure, Java SE TCK-tested and compliant, production-ready runtimes."
-msgstr ""
+msgstr "Eclipse Adoptium Top-Level Projectの使命は、Javaエコシステム内で使用される高品質のランタイムと関連技術を生産することです。Eclipse Adoptiumはまた、コードとしてのオープンソースのインフラストラクチャ、包括的な継続的統合ビルドとテストファーム、および広範な品質保証テストを含む成果物を提供します。これらの成果物は、Eclipse Adoptiumプロジェクトや他のランタイム技術構築者が、安全で、Java SE TCKでテストされ、準拠した、生産可能なランタイムを確実に提供するために使用することができます。"
