Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-json.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-26 02:16+0000\n"
+"POT-Creation-Date: 2021-09-16 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -129,7 +129,7 @@ msgid ""
 "    -DprojectArtifactId=rest-json-quickstart \\\n"
 "    -DclassName=\"org.acme.rest.json.FruitResource\" \\\n"
 "    -Dpath=\"/fruits\" \\\n"
-"    -Dextensions=\"resteasy,resteasy-jackson\"\n"
+"    -Dextensions=\"resteasy-jackson\"\n"
 "cd rest-json-quickstart\n"
 msgstr ""
 
