--- a/l10n/po/ja_JP/_versions/main/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/qute-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-04 02:15+0000\n"
+"POT-Creation-Date: 2021-09-17 02:24+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -936,12 +936,16 @@ msgstr "エスケープされていない値をレンダリングする必要が
 
 #. type: Plain text
 #: upstream/_versions/main/guides/qute-reference.adoc:417
-msgid "Use the `raw` or `safe` properties implemented as extension methods of the `java.lang.Object`,"
+#, fuzzy
+#| msgid "Use the `raw` or `safe` properties implemented as extension methods of the `java.lang.Object`,"
+msgid "Either use the `raw` or `safe` properties implemented as extension methods of the `java.lang.Object`,"
 msgstr "`java.lang.Object` の拡張メソッドとして実装されている `raw` または `safe` プロパティーを使用します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/qute-reference.adoc:418
-msgid "Wrap the `String` value in a `io.quarkus.qute.RawString`."
+#, fuzzy
+#| msgid "Wrap the `String` value in a `io.quarkus.qute.RawString`."
+msgid "Or wrap the `String` value in a `io.quarkus.qute.RawString`."
 msgstr "`String` の値を `io.quarkus.qute.RawString` でラップします。"
 
 #. type: delimited block -
