--- a/l10n/po/ja_JP/_posts/2019-11-08-quarkus-for-spring-developers.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-11-08-quarkus-for-spring-developers.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-15 16:11+0000\n"
+"POT-Creation-Date: 2021-09-20 22:03+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -61,7 +61,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_posts/2019-11-08-quarkus-for-spring-developers.adoc:19
 #, fuzzy
-msgid "A free 140-page book, https://quarkus.io/guides/spring-di-guide[Quarkus for Spring Developers], is now available that discusses this topic in greater, and updated, detail."
+msgid "A free 140-page book, https://red.ht/quarkus-spring-devs[Quarkus for Spring Developers], is now available that discusses this topic in greater, and updated, detail."
 msgstr "現在、140ページの無料書籍「 link:https://quarkus.io/guides/spring-di-guide[Quarkus for Spring] Developers」が発売されており、このトピックについてより詳しく、また最新の情報が記載されています。"
 
 #. type: Title ==
