Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/mongodb.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-26 02:16+0000\n"
+"POT-Creation-Date: 2021-09-22 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -134,13 +134,15 @@ msgid ""
 "    -DprojectArtifactId=mongodb-quickstart \\\n"
 "    -DclassName=\"org.acme.mongodb.FruitResource\" \\\n"
 "    -Dpath=\"/fruits\" \\\n"
-"    -Dextensions=\"resteasy,resteasy-jackson,mongodb-client,resteasy-mutiny,context-propagation\"\n"
+"    -Dextensions=\"resteasy-reactive-jackson,mongodb-client\"\n"
 "cd mongodb-quickstart\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/mongodb.adoc:57
-msgid "This command generates a Maven structure importing the RESTEasy/JAX-RS, Jackson, Mutiny, Context Propagation and MongoDB Client extensions.  After this, the quarkus-mongodb-client extension has been added to your `pom.xml`."
+#, fuzzy
+#| msgid "This command generates a Maven structure importing the RESTEasy/JAX-RS, Jackson, Mutiny, Context Propagation and MongoDB Client extensions.  After this, the quarkus-mongodb-client extension has been added to your `pom.xml`."
+msgid "This command generates a Maven structure importing the RESTEasy Reactive Jackson and MongoDB Client extensions.  After this, the `quarkus-mongodb-client` extension has been added to your `pom.xml`."
 msgstr "このコマンドは、RESTEasy/JAX-RS、Jackson、Mutiny、Context Propagation、MongoDBクライアントエクステンションをインポートするMaven構造を生成します。この後、quarkus-mongodb-client エクステンションが `pom.xml` に追加されます。"
 
 #. type: Plain text
