--- a/l10n/po/ja_JP/_versions/main/guides/mongodb-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/mongodb-panache.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-26 02:16+0000\n"
+"POT-Creation-Date: 2021-09-22 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -149,13 +149,13 @@ msgid ""
 "    -DprojectArtifactId=mongodb-panache-quickstart \\\n"
 "    -DclassName=\"org.acme.mongodb.panache.PersonResource\" \\\n"
 "    -Dpath=\"/persons\" \\\n"
-"    -Dextensions=\"resteasy,resteasy-jackson,mongodb-panache\"\n"
+"    -Dextensions=\"resteasy-reactive-jackson,mongodb-panache\"\n"
 "cd mongodb-panache-quickstart\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/mongodb-panache.adoc:79
-msgid "This command generates a Maven structure importing the RESTEasy/JAX-RS, Jackson and MongoDB with Panache extensions.  After this, the `quarkus-mongodb-panache` extension has been added to your `pom.xml`."
+msgid "This command generates a Maven structure importing the RESTEasy Reactive Jackson and MongoDB with Panache extensions.  After this, the `quarkus-mongodb-panache` extension has been added to your `pom.xml`."
 msgstr ""
 
 #. type: Plain text
@@ -788,7 +788,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/mongodb-panache.adoc:420
-msgid "First, include one of the RESTEasy extensions to enable JAX-RS endpoints, for example, add the `io.quarkus:quarkus-resteasy-jackson` dependency for JAX-RS and JSON support."
+msgid "First, include one of the RESTEasy extensions to enable JAX-RS endpoints, for example, add the `io.quarkus:quarkus-resteasy-reactive-jackson` dependency for JAX-RS and JSON support."
 msgstr ""
 
 #. type: Plain text
