--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-grpc-grpc-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-grpc-grpc-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-26 02:43+0000\n"
+"POT-Creation-Date: 2021-09-24 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,12 +53,31 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-grpc-grpc-build-time-config.adoc:17
+#: upstream/_generated-config/main/config/quarkus-grpc-grpc-build-time-config.adoc:26
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-grpc-grpc-build-time-config.adoc:19
+#: upstream/_generated-config/main/config/quarkus-grpc-grpc-build-time-config.adoc:20
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-grpc-grpc-build-time-config.adoc:25
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-grpc-grpc-build-time-config_quarkus.grpc.dev-mode.force-server-start]]`link:#quarkus-grpc-grpc-build-time-config_quarkus.grpc.dev-mode.force-server-start[quarkus.grpc.dev-mode.force-server-start]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Start gRPC server in dev mode even if no gRPC services are implemented. By default set to `true` to ease incremental development of new services using dev mode.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-grpc-grpc-build-time-config.adoc:28
+#, no-wrap
+msgid "`true`"
+msgstr ""
