--- a/l10n/po/ja_JP/_versions/main/guides/dev-mode-differences.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/dev-mode-differences.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-09-27 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -39,7 +39,9 @@ msgstr "イントロ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:16
-msgid "Quarkus provides a dev-mode (explained in more detail link:maven-tooling.adoc#dev-mode[here] and link:gradle-tooling.adoc#dev-mode[here]) which greatly aids during development but should *NEVER* be used in production."
+#, fuzzy
+#| msgid "Quarkus provides a dev-mode (explained in more detail link:maven-tooling.adoc#dev-mode[here] and link:gradle-tooling.adoc#dev-mode[here]) which greatly aids during development but should *NEVER* be used in production."
+msgid "Quarkus provides a dev-mode (explained in more detail link:maven-tooling#dev-mode[here] and link:gradle-tooling#dev-mode[here]) which greatly aids during development but should *NEVER* be used in production."
 msgstr "Quarkusには開発モード（詳細は link:maven-tooling.adoc#dev-mode[こちら]と link:gradle-tooling.adoc#dev-mode[こちら]）があり、開発に大いに役立ちます。"
 
 #. type: Title ==
@@ -144,7 +146,9 @@ msgstr "データベースインポートスクリプト"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:54
-msgid "The `quarkus-hibernate-orm` extension will run the `import.sql` script in `src/main/resources` when Quarkus is running in dev-mode. More details can be found link:hibernate-orm.adoc#dev-mode[here]."
+#, fuzzy
+#| msgid "The `quarkus-hibernate-orm` extension will run the `import.sql` script in `src/main/resources` when Quarkus is running in dev-mode. More details can be found link:hibernate-orm.adoc#dev-mode[here]."
+msgid "The `quarkus-hibernate-orm` extension will run the `import.sql` script in `src/main/resources` when Quarkus is running in dev-mode. More details can be found link:hibernate-orm#dev-mode[here]."
 msgstr "`quarkus-hibernate-orm` エクステンションは、Quarkusがdev-modeで動作しているときに、 `src/main/resources` の `import.sql` スクリプトを実行します。詳細は link:hibernate-orm.adoc#dev-mode[こちら]をご覧ください。"
 
 #. type: Title ===
@@ -157,7 +161,7 @@ msgstr "Dev Services"
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:59
 #, fuzzy
 #| msgid "When testing or running in dev-mode Quarkus can even provide you with a zero config database out of the box, a feature we refer to as DevServices.  More information can be found link:datasource.adoc#dev-services[here]."
-msgid "When testing or running in dev-mode Quarkus can even provide you with a zero config database out of the box, a feature we refer to as Dev Services.  More information can be found link:datasource.adoc#dev-services[here]."
+msgid "When testing or running in dev-mode Quarkus can even provide you with a zero config database out of the box, a feature we refer to as Dev Services.  More information can be found link:datasource#dev-services[here]."
 msgstr "Quarkusでは、テストや開発モードで実行する際に、ゼロコンフィグのデータベースをすぐに提供することができますが、これはDevServicesと呼ばれる機能です。詳細については link:datasource.adoc#dev-services[こちら]をご覧ください。"
 
 #. type: Title ===
@@ -168,7 +172,9 @@ msgstr "Swagger UI"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:63
-msgid "The `quarkus-smallrye-openapi` extension will expose the Swagger UI when Quarkus is running in dev-mode. Additional information can be found link:openapi-swaggerui.adoc#dev-mode[here]."
+#, fuzzy
+#| msgid "The `quarkus-smallrye-openapi` extension will expose the Swagger UI when Quarkus is running in dev-mode. Additional information can be found link:openapi-swaggerui.adoc#dev-mode[here]."
+msgid "The `quarkus-smallrye-openapi` extension will expose the Swagger UI when Quarkus is running in dev-mode. Additional information can be found link:openapi-swaggerui#dev-mode[here]."
 msgstr "`quarkus-smallrye-openapi` エクステンションは、Quarkusがdev-modeで動作しているときに、Swagger UIを公開します。追加情報は link:openapi-swaggerui.adoc#dev-mode[こちら]をご覧ください。"
 
 #. type: Title ===
@@ -179,7 +185,9 @@ msgstr "GraphQL UI"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:67
-msgid "The `quarkus-smallrye-graphql` extension will expose the GraphiQL UI when Quarkus is running in dev-mode. More details can be found link:smallrye-graphql.adoc#ui[here]."
+#, fuzzy
+#| msgid "The `quarkus-smallrye-graphql` extension will expose the GraphiQL UI when Quarkus is running in dev-mode. More details can be found link:smallrye-graphql.adoc#ui[here]."
+msgid "The `quarkus-smallrye-graphql` extension will expose the GraphiQL UI when Quarkus is running in dev-mode. More details can be found link:smallrye-graphql#ui[here]."
 msgstr "`quarkus-smallrye-graphql` エクステンションは、Quarkusがdev-modeで動作しているときにGraphiQL UIを公開します。詳細は link:smallrye-graphql.adoc#ui[こちら]をご覧ください。"
 
 #. type: Title ===
@@ -190,7 +198,9 @@ msgstr "Health UI"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:71
-msgid "The `quarkus-smallrye-health` extension will expose the Health UI when Quarkus is running in dev-mode. link:smallrye-health.adoc#ui[This] section provides additional information."
+#, fuzzy
+#| msgid "The `quarkus-smallrye-health` extension will expose the Health UI when Quarkus is running in dev-mode. link:smallrye-health.adoc#ui[This] section provides additional information."
+msgid "The `quarkus-smallrye-health` extension will expose the Health UI when Quarkus is running in dev-mode. link:smallrye-health#ui[This] section provides additional information."
 msgstr "`quarkus-smallrye-health` エクステンションは、Quarkusがdev-modeで動作しているときにHealth UIを公開します。 link:smallrye-health.adoc#ui[この]セクションでは、追加情報を提供します。"
 
 #. type: Title ===
@@ -203,7 +213,7 @@ msgstr "Mock mailer"
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:75
 #, fuzzy
 #| msgid "The `quarkus-mailer` extension will enable an in-memory mock mail server when Quarkus is running in dev-mode. See link:mailer.adoc#testing[this] for more details."
-msgid "The `quarkus-mailer` extension will enable an in-memory mock mail server when Quarkus is running in dev-mode. See link:mailer-reference.adoc#testing[this] for more details."
+msgid "The `quarkus-mailer` extension will enable an in-memory mock mail server when Quarkus is running in dev-mode. See link:mailer-reference#testing[this] for more details."
 msgstr "`quarkus-mailer` エクステンションは、Quarkusがdev-modeで動作しているときに、インメモリのモックメールサーバを有効にします。詳しくは link:mailer.adoc#testing[こちら]をご覧ください。"
 
 #. type: Title ===
@@ -246,7 +256,9 @@ msgstr "開発モードでは、アプリケーションの実行時フットプ
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:98
-msgid "In contrast, in a production application the main objective for Quarkus is to consume the least amount of memory and startup in the smallest amount of time.  Thus, when running the production application, build time operations are not performed (by definition) and various infrastructure classes needed at build time are not present at all at runtime.  Furthermore, the purpose built ClassLoader that comes with the link:maven-tooling.adoc#fast-jar[fast-jar] package type ensures that class lookup is done as fast as possible while also keeping the minimum amount of jars in memory."
+#, fuzzy
+#| msgid "In contrast, in a production application the main objective for Quarkus is to consume the least amount of memory and startup in the smallest amount of time.  Thus, when running the production application, build time operations are not performed (by definition) and various infrastructure classes needed at build time are not present at all at runtime.  Furthermore, the purpose built ClassLoader that comes with the link:maven-tooling.adoc#fast-jar[fast-jar] package type ensures that class lookup is done as fast as possible while also keeping the minimum amount of jars in memory."
+msgid "In contrast, in a production application the main objective for Quarkus is to consume the least amount of memory and startup in the smallest amount of time.  Thus, when running the production application, build time operations are not performed (by definition) and various infrastructure classes needed at build time are not present at all at runtime.  Furthermore, the purpose built ClassLoader that comes with the link:maven-tooling#fast-jar[fast-jar] package type ensures that class lookup is done as fast as possible while also keeping the minimum amount of jars in memory."
 msgstr "対照的に、プロダクションアプリケーションでは、Quarkusの主な目的は、最小限のメモリを消費し、最小限の時間で起動することです。したがって、本番アプリケーションを実行する際には、ビルド時の操作は（定義上）実行されず、ビルド時に必要なさまざまなインフラストラクチャクラスは、実行時にはまったく存在しません。さらに、 link:maven-tooling.adoc#fast-jar[fast-jar]パッケージタイプに付属する目的に応じて構築されたClassLoaderにより、クラスの検索が可能な限り高速に行われると同時に、メモリ内のjarの量も最小限に抑えられます。"
 
 #. type: Title ==
