Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-10 02:14+0000\n"
+"POT-Creation-Date: 2021-09-30 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -78,6 +78,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:26
 #: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:71
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:154
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -85,6 +86,7 @@ msgstr "boolean"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:29
 #: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:74
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:157
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -146,6 +148,8 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:80
 #: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:89
 #: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:145
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:163
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:172
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -334,24 +338,60 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:147
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:148
 #, no-wrap
 msgid "`java\\..*`"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:153
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.only-test-application-module]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.only-test-application-module[quarkus.test.only-test-application-module]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If this is true then only the tests from the main application module will be run (i.e. the module that is currently running mvn quarkus:dev). If this is false then tests from all dependency modules will be run as well.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:162
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.include-module-pattern]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.include-module-pattern[quarkus.test.include-module-pattern]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Modules that should be included for continuous testing. This is a regular expression and is matched against the module groupId:artifactId.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:171
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.exclude-module-pattern]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.exclude-module-pattern[quarkus.test.exclude-module-pattern]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Modules that should be excluded for continuous testing. This is a regular expression and is matched against the module groupId:artifactId. This is ignored if include-module-pattern has been set.\n"
+"--"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:151
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:178
 #, no-wrap
 msgid "About the Duration format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:155
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:182
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:159
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:186
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
 
