--- a/l10n/po/ja_JP/_versions/main/guides/spring-data-rest.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/spring-data-rest.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-09 02:14+0000\n"
+"POT-Creation-Date: 2021-09-30 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -100,7 +100,7 @@ msgid ""
 "mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=spring-data-rest-quickstart \\\n"
-"    -Dextensions=\"spring-data-rest,resteasy-reactive-jackson,quarkus-jdbc-postgresql\" \\\n"
+"    -Dextensions=\"spring-data-rest,resteasy-jackson,quarkus-jdbc-postgresql\" \\\n"
 "    -DnoExamples\n"
 "cd spring-data-rest-quickstart\n"
 msgstr ""
@@ -154,7 +154,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/spring-data-rest.adoc:80
-msgid "Note: both `resteasy-reactive-jackson` and `resteasy-reactive-jsonb` are supported and can be interchanged."
+msgid "Note: both `resteasy-jackson` and `resteasy-jsonb` are supported and can be interchanged."
 msgstr ""
 
 #. type: Title ==
