--- a/l10n/po/ja_JP/_versions/main/guides/http-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/http-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-09-30 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -763,7 +763,7 @@ msgstr ""
 #. type: Table
 #: upstream/_versions/main/guides/http-reference.adoc:250
 #, no-wrap
-msgid "`%{RELATIVE_PATH}`"
+msgid "`%{REQUEST_PATH}`"
 msgstr ""
 
 #. type: Table
