--- a/l10n/po/ja_JP/_versions/main/guides/config-yaml.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-yaml.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-12 03:12+0000\n"
+"POT-Creation-Date: 2021-10-01 02:27+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -113,13 +113,19 @@ msgstr ""
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-yaml.adoc:62
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "# REST Client configuration property\n"
+#| "org:\n"
+#| "  acme:\n"
+#| "    restclient:\n"
+#| "      CountriesService/mp-rest/url: https://restcountries.eu/rest\n"
 msgid ""
 "# REST Client configuration property\n"
-"org:\n"
-"  acme:\n"
-"    restclient:\n"
-"      CountriesService/mp-rest/url: https://restcountries.eu/rest\n"
+"quarkus:\n"
+"  rest-client:\n"
+"    org.acme.restclient.CountriesService:\n"
+"      url: https://restcountries.eu/rest\n"
 msgstr ""
 "# REST Client configuration property\n"
 "org:\n"
